...
                modifier = Modifier
                    .padding(16.dp, 12.dp, 8.dp, 16.dp)
                    .animateContentSize()
            ) {
                Row(verticalAlignment = Alignment.CenterVertically) {
                    Text(
                        "Select tags", style = MaterialTheme.typography.titleMedium,
                        modifier = Modifier.weight(1f),
                    )
                    IconButton(
                        onClick = {
                            viewModel.toggleTagOptionsVisibility()
                        }
...
    }

    Scaffold(
        topBar = {
            TopAppBar(
                title = {
                    Text("Account")
                },
                navigationIcon = {
                    IconButton(onClick = onBack) {
                        Icon(
                            imageVector = Icons.Default.ChevronLeft,
                            contentDescription = "Go back"
...
            uiState.apply {
                MyTextField(
                    value = account.platformName,
                    onValueChange = {
                        viewModel.update(platformName = it)
                    },
                    hint = "Platform",
                    keyboardOptions = KeyboardOptions(imeAction = ImeAction.Next),
                    modifier = Modifier.fillMaxWidth(),
                    trailing = {
                        if (account.platformName.isBlank()) {
                            Icon(
                                Icons.Default.PriorityHigh,
...
                )
                MyTextField(
                    value = account.username ?: "",
                    onValueChange = {
                        viewModel.update(username = it)
                    },
                    hint = "Username",
                    keyboardOptions = KeyboardOptions(imeAction = ImeAction.Next),
                    modifier = Modifier.fillMaxWidth(),
                )
                MyTextField(
                    value = account.email ?: "",
                    onValueChange = {
                        viewModel.update(email = it)
                    },
                    hint = "Email",
                    trailing = {
                        if (error.invalidEmail) {
                            Icon(
                                Icons.Default.PriorityHigh,
                                contentDescription = "Invalid email",
                                tint = MaterialTheme.colorScheme.onError,
...
                )
                MyTextField(
                    value = account.note,
                    onValueChange = {
                        viewModel.update(note = it)
                    },
                    hint = "Note",
                    singleLine = false,
                    keyboardOptions = KeyboardOptions(
                        imeAction = if (account.credentials.isEmpty()) ImeAction.Done else ImeAction.Next
                    ),
                    modifier = Modifier.fillMaxWidth(),
                )
...
                                viewModel.createCredential()
                            },
                            modifier = Modifier.size(24.dp)
                        ) {
                            Icon(
                                Icons.Default.Add,
                                contentDescription = "Add credential",
                                modifier = Modifier.size(20.dp)
                            )
                        }
                    }
                    if (account.credentials.isNotEmpty()) {
                        Spacer(modifier = Modifier.height(16.dp))
...
                                value = cred.value,
                                onValueChange = {
                                    viewModel.updateCredential(id = cred.id, value = it)
                                },
                                hint = when (cred.type) {
                                    CredentialType.PIN -> "PIN"
                                    CredentialType.Password -> "Password"
                                },
                                modifier = Modifier.weight(1f),
                                singleLine = true,
                                visualTransformation = if (showPassword) VisualTransformation.None else PasswordVisualTransformation(),
                                keyboardOptions = KeyboardOptions(
                                    keyboardType = KeyboardType.Password,
...
                                                showPassword = !showPassword
                                            },
                                            modifier = Modifier.size(16.dp)
                                        ) {
                                            Icon(
                                                imageVector = if (showPassword) Icons.Filled.Visibility else Icons.Filled.VisibilityOff,
                                                contentDescription = if (showPassword) "Hide password" else "Show password"
                                            )
                                        }
                                    }
                                }
                            )
                            Spacer(modifier = Modifier.width(8.dp))
...
                                viewModel.toggleTagOptionsVisibility()
                            },
                            modifier = Modifier.size(24.dp)
                        ) {
                            Icon(
                                Icons.Default.Add,
                                contentDescription = "Add tag",
                                modifier = Modifier.size(20.dp)
                            )
                        }
                    }
                    Spacer(modifier = Modifier.height(8.dp))
                    FlowRow(
...
                                    if (canRemove) viewModel.removeTag(tag)
                                },
                                trailingIcon = if (canRemove) {
                                    {
                                        Icon(
                                            Icons.Default.Close,
                                            contentDescription = "Remove tag",
                                            modifier = Modifier.size(16.dp)
                                        )
                                    }
                                } else null,
                                label = {
                                    Text(tag.label)
...
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(40.dp),
                    enabled = canSave
                ) {
                    Text("Save")
                }
            }
        }
    }
}
